
	Added logical NOT unary operator ("!").

	Added function name completion on command-line.

	Added file renaming filetype plugin for Vim.  It displays list of original
	file names in a vertical split.  Thanks to Factorial Prime.

	Added file additional mail filetype plugin for Vim.  It allows one to pick
	attachments via Vifm on <leader>A shortcut.  Thanks to Pavneet Arora.

	Highlight environment variables in :source command.

	Do not highlight option names in the right-hand side of assignments of
	:set command.

	Highlight numbers and all operators (most were missing) in expressions.

	Highlight wrapped :! commands properly.

	Various syntax highlight improvements related to handling of command
	arguments.

	Make Vim plugin use cmd.exe as default shell on Windows.  Thanks to
	Jonathan Da Silva.

	Provided additional repository for Vim plugin (see the README for URL).

	Documented using of 256 colors in :highlight command.  Thanks to Michael
	Vetter (a.k.a. jubalh).

	Rewrote trash content removal with system calls in background thread to
	omit unportable invocation of shells.  It's also visible in :jobs menu.
	Thanks to lyuts and ckester.

	Ignore trailing whitespace after background mark (" &") in command-line
	mode.

	Made :filter command consider trailing slash for symbolic links that point
	to directories.  Thanks to filterfalse.

	Do not reset selection on navigating to a mark in current directory.
	Thanks to filterfalse.

	Display error on encountering unknown values assigned to 'sort' option.

	Allowed use of :filter syntax in user-defined filter commands (e.g.
	"command conf filter/.*\.cfg$/").

	Do not reset color scheme to default one on :restart if another existing
	one is stored in vifminfo file.

	Allowed tabulation to be used as arguments separators in command-line
	commands.  Thanks to y2kbugger.

	Renamed "default color scheme" to "primary color scheme" in documentation
	to avoid confusion.
